UI Work Almost Complete

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -23,6 +23,8 @@
 		"paths": {
 			"@assets/*": ["./src/assets/*"],
 			"@components/*": ["./src/components/*"],
+			"@ui/*": ["./src/components/ui/*"],
+			"@forms/*": ["src/components/forms/*"],
 			"@context/*": ["./src/context/*"],
 			"@hooks/*": ["./src/hooks/*"],
 			"@pages/*": ["./src/pages/*"],
